half of light mode flicker fix

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 /* Standard Preferences */
@@ -55,15 +56,12 @@ body {
     font-size: 2.5rem;
     color: var(--col-text);
     height: 100vh;
-    transition: 0.5s ease;
     background-image: radial-gradient(var(--col-bodybackd) 2px, transparent 2px), radial-gradient(var(--col-bodybackd) 2px, transparent 2px);
     background-size: 100px 100px;
     background-position: 0 0, 50px 50px;
     background-color: var(--col-bodyback);
     background-attachment: fixed;
 }
-
-
 /* Standard Preferences */
 p {
     font-size: 1.4rem;
